@@ -8,4 +8,4 @@ require 'lib/thin'
 
 Dir['tasks/**/*.rake'].each { |rake| load rake }
 
-task :default => [:compile, :spec]
+task :default => :spec
