@@ -89,5 +89,6 @@ describe 'Daemonizing' do
   
   after do
     Process.kill(9, @pid.to_i) if @pid && Process.running?(@pid.to_i)
+    Process.kill(9, @server.pid) if @server.pid && Process.running?(@server.pid)
   end
 end
