@@ -22,7 +22,7 @@ spec = Gem::Specification.new do |s|
   end
 
   s.files                 = %w(COPYING CHANGELOG README Rakefile) +
-                            Dir.glob("{benchmark,bin,doc,example,lib,spec}/**/*") + 
+                            Dir.glob("{benchmark,bin,doc,example,lib,spec,tasks}/**/*") + 
                             Dir.glob("ext/**/*.{h,c,rb,rl}")
   
   if WIN
